--- a/pom.xml
+++ b/pom.xml
@@ -107,5 +107,11 @@
             <version>7.2.11-beta-01</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>23.0.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
